--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher_icon_foreground"
-        android:label="@string/app_name"
+        android:label="@string/tracker_app_name"
         android:roundIcon="@mipmap/ic_launcher_icon_foreground"
         android:supportsRtl="true"
         tools:targetApi="31">
