--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.RECEIVE_LAUNCH_BROADCASTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <attribution android:tag="data_collection_attribution_tag"
+        android:label="@string/personal_data_collection_attribution_tag" />
 
     <application
         android:allowBackup="false"
