--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="com.google.android.gms.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <!--    new for Android 14-->
+<!--    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_HEALTH" />-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
     <uses-permission android:name="android.permission.BODY_SENSORS" />
 
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
@@ -64,12 +67,12 @@
             android:exported="false"
             android:foregroundServiceType="location"
             android:launchMode="singleInstance" />
-
         <receiver
             android:name="uk.ac.shef.tracker.core.monitors.ActivityMonitor$ActivityTransitionsReceiver"
             android:enabled="true"
-            tools:ignore="Instantiatable" />
-
+            android:exported="true"
+            android:permission="android.permission.ACTIVITY_RECOGNITION"
+            />
     </application>
 
 </manifest>
